# proxmox-info

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Pipfile  README.md  pyproject.toml  tox.ini
src/proxmox_info/: config.py  pminfo.py
tests/: conftest.py  test_enum_and_config.py  test_main.py  test_pminfo.py  test_validation.py
