[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "proxmox-info"
dynamic = ["version"]
authors = [
    { name="Jason Lingohr", email="jason@lucid.net.au" },
]
description = "A CLI utility to return various info from the Proxmox API."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["proxmox", "pve", "proxmox-ve", "storage", "virtualization", "kvm", "lxc", "cli"]
dependencies = [
    "proxmoxer",
    "humanize",
    "dynaconf",
    "click",
    "requests",
    "pandas",
    "rich",
]

[project.scripts]
proxmox-info = "proxmox_info.pminfo:main"

[project.urls]
Homepage = "https://github.com/lingfish/proxmox-info"
Issues = "https://github.com/lingfish/proxmox-info/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/proxmox_info/_version.py"

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest",
    "pytest-mock",
]

[tool.hatch.envs.hatch-test.env-vars]
FORCE_ENV_FOR_DYNACONF = "testing"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "#\\s*pragma: no cover",
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
    "^\\s*return NotImplemented\\b",
    "^\\s*raise$",
    "^if __name__ == ['\"]__main__['\"]:$",
]

[tool.pylint]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
